--- a/package.json
+++ b/package.json
@@ -19,8 +19,17 @@
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
+    "@types/webgl2": "^0.0.6",
+    "angular-screenshot": "^0.4.1",
+    "bootstrap": "^4.5.0",
+    "face-api.js": "^0.22.2",
+    "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
+    "owl.carousel": "^2.3.4",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
