--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/webgl2": "^0.0.6",
     "bootstrap": "^4.5.0",
     "face-api.js": "^0.22.2",
+    "fs-web": "^1.0.1",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "owl.carousel": "^2.3.4",
