--- a/package.json
+++ b/package.json
@@ -50,5 +50,10 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.2"
-  }
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
+}
 }
